# flowmaid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html
docs/docs/: index.html
examples/: advanced.mmd  bench.rs  class.mmd  demo.mmd  drag_sim.rs  er.mmd  fanout.mmd  long-labels.mmd  lr.mmd  panjang.mmd  pie.mmd  sequence.mmd  shapes.mmd  state.mmd  stres.mmd  stress.mmd  subgraph.mmd  svg.rs
src/: class.rs  emit.rs  er.rs  fold.rs  journey.rs  layout.rs  lib.rs  main.rs  md.rs  mindmap.rs  model.rs  parser.rs  pie.rs  render.rs  scene.rs  seq.rs  style.rs
