[package]
name = "flowmaid"
version = "0.12.0"
edition = "2021"
rust-version = "1.75"
description = "Mermaid-like diagram engine in pure std Rust (flowcharts, ER, UML class, sequence, pie & state diagrams): hand-written parser, Sugiyama-style layout, SVG renderer, and an interactive scene API for drag-and-drop apps. Zero dependencies."
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["mermaid", "diagram", "flowchart", "svg", "layout"]
categories = ["visualization", "command-line-utilities"]
repository = "https://github.com/go-routine-id/flowmaid"

[features]
# Optional Markdown companion (`flowmaid::md`): extract ```mermaid
# blocks, splice edits back into their fences, render whole documents
# to HTML with inlined SVG. The default build stays zero-dependency.
markdown = ["dep:markdown"]

[dependencies]
markdown = { version = "1.0", optional = true }
